# UniversalNumerics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  UniversalNumerics.sln  UniversalNumerics.vcxproj  dllmain.cpp
include/UniversalNumerics/: Tensor.h
include/UniversalNumerics/Networking/: MLP.h
src/: CMakeLists.txt
src/Networking/: MLP.cpp
tests/: CMakeLists.txt  main.cpp
